# limo_ws

./: .gitignore  LAB10实验报告.md  homework_requair  实验文档索引.md
lab10_final_submission_20260521/: LAB10实验报告.md  LAB10提交说明.md  实验文档索引.md
lab10_final_submission_20260521/map/: map.pgm
lab10_final_submission_20260521/src/smartcar_navigation/: CMakeLists.txt  package.xml  寻路流程说明.md
lab10_final_submission_20260521/src/smartcar_navigation/launch/: amcl.launch  limo_real_navigation_teb.launch  move_base_real_dwa.launch  move_base_real_teb_astar.launch  smartcar_navigation_dwa.launch  smartcar_navigation_teb_astar.launch
lab10_final_submission_20260521/src/smartcar_navigation/param/: costmap_common_params.yaml  global_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
lab10_final_submission_20260521/src/ugv_gazebo_sim/limo/limo_mapping/: CMakeLists.txt  建图流程说明.md
src/slam_gmapping/gmapping/launch/: slam_gmapping_pr2.launch
src/smartcar_navigation/: CMakeLists.txt  package.xml  实车导航运行说明.md  寻路流程说明.md
src/smartcar_navigation/launch/: amcl_real.launch  limo_real_amcl.launch  limo_real_navigation_dwa.launch  limo_real_navigation_teb_astar.launch  move_base_real_teb.launch  move_base_teb_astar.launch  smartcar_amcl.launch  smartcar_navigation_teb.launch
src/smartcar_navigation/param/: dwa_local_planner_params.yaml  local_costmap_params.yaml
src/smartcar_navigation/rviz/: nav_teb.rviz
src/smartcar_navigation/scripts/: publish_nav_goal.py
src/ugv_gazebo_sim/limo/: README.md
src/ugv_gazebo_sim/limo/limo_camera/: CMakeLists.txt  package.xml  setup.py
src/ugv_gazebo_sim/limo/limo_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
src/ugv_gazebo_sim/limo/limo_camera/launch/: extrinsic_camera_calibration.launch
src/ugv_gazebo_sim/limo/limo_camera/nodes/: image_compensation  image_projection
src/ugv_gazebo_sim/limo/limo_detect/: CMakeLists.txt  package.xml  setup.py
src/ugv_gazebo_sim/limo/limo_detect/launch/: detect_construction.launch  detect_intersection.launch  detect_lane.launch  detect_level_crossing.launch  detect_parking.launch  detect_sign.launch  detect_traffic_light.launch  detect_tunnel.launch
src/ugv_gazebo_sim/limo/limo_driving/: CMakeLists.txt  package.xml  setup.py
src/ugv_gazebo_sim/limo/limo_gazebo_sim/: CMakeLists.txt  package.xml
src/ugv_gazebo_sim/limo/limo_gazebo_sim/config/: limo_cartographer.lua
src/ugv_gazebo_sim/limo/limo_gazebo_sim/launch/: limo_ackerman.launch  limo_ackerman_cartographer.launch  limo_ackerman_gmapping.launch  limo_ackerman_hector.launch  limo_demo.launch  limo_four_diff.launch  limo_four_diff_headless.launch
src/ugv_gazebo_sim/limo/limo_gazebo_sim/rviz/: limo_gmapping.rviz
src/ugv_gazebo_sim/limo/limo_gazebo_sim/scripts/: keyboard_teleop.py
src/ugv_gazebo_sim/limo/limo_gazebo_sim/worlds/: bus.world  limo_autorace.world
src/ugv_gazebo_sim/limo/limo_mapping/: CMakeLists.txt  package.xml
src/ugv_gazebo_sim/limo/limo_mapping/launch/: cartographer.launch  hector.launch
(+30 files in other folders)
