<?xml version="1.0"?>
<package format="2">
  <name>smartcar_navigation</name>
  <version>0.0.1</version>
  <description>LAB10 navigation package adapted for the LIMO workspace.</description>

  <maintainer email="liujiahui@example.com">liujiahui</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
</package>
