<?xml version="1.0"?>
<package format="2">
  <name>limo_mapping</name>
  <version>0.0.1</version>
  <description>Unified mapping launch package for Limo.</description>

  <maintainer email="pengju.du@agilex.ai">agilex</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
